@@ -1,5 +1,8 @@
 2019-09-25  Sam Varshavchik  <mrsam@courier-mta.com>
 
+	* file_dialog: clean the filename field after closing the dialog
+	successfully.
+
 	* Add create_ok2_cancel_dialog.
 
 	* remove_item() did not work correctly in a combo-box.
